--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         </nav>
       </header>
 	  
-     <section class="section-1">  
+     <div class="section-1">  
       <div class="image-background">
          <div class="headline">
             <section>
@@ -32,7 +32,7 @@
             </section>
             <section>
               <div class="lest-connect-text">
-                <p> LET'S CONNECT </p>
+                <a href="#" target="_blank" id="button-connect"> LET'S CONNECT </a>
               </div>
               <ul class="link-media">
                 <li><a href="https://twitter.com/" target="_blank"><img src="./image/Vector-twitter.svg" alt="twitter icon"></a></li>
@@ -44,7 +44,7 @@
             </section>
           </div>
         </div>
-	   </section>
+	  </div>
     </div>
   </body>
 </html>
