Modified the index.html for the NavBar and headline main containers

--- a/index.html
+++ b/index.html
@@ -9,30 +9,30 @@
     <title> Portfolio-Microverse </title>
   </head>
   <body>
-    <div class="containers">
-      <header class="navbar-container">
+    <header class="containers">
+      <div class="navbar-container">
         <a class="logo" href="#"> AlexisJW </a>
         <nav id="navbar">
           <div class="About"></div>
           <div class="My works"></div>
           <div class="Contact"></div>
         </nav>
-      </header>
+      </div>
 	  
      <div class="section-1">  
       <div class="image-background">
-         <div class="headline">
-            <section>
+         <section class="headline">
+            <div>
               <h1 class="text1"> I'm Alexis Glad to see you! </h1>
               <p class="text2">
                I'm a software developer! I can help you build a product , feature or
                website Look through some of my work and experience! If you like what
                you see and have a project you need coded, don't hestiate to contact me.
               </p>
-            </section>
+            </div>
             <section>
               <div class="lest-connect-text">
-                <a href="#" target="_blank" id="button-connect">LET'S CONNECT</a>
+                <a href="#" target="_blank" id="button-connect"> LET'S CONNECT </a>
               </div>
               <ul class="link-media">
                 <li><a href="https://twitter.com/" target="_blank"><img src="./image/Vector-twitter.svg" alt="twitter icon"></a></li>
@@ -42,9 +42,9 @@
                 <li><a href="https://web.facebook.com/profile.php?id=100001094813889" target="_blank"><img src="./image/Vector.svg" alt="Fingers icon"></a></li>
               </ul>
             </section>
-          </div>
+          </section>
         </div>
 	  </div>
-    </div>
+    </header>
   </body>
 </html>
