My firt commit for the finish mobile version

--- a/index.html
+++ b/index.html
@@ -46,5 +46,165 @@
         </div>
 	  </div>
     </header>
+    <section class="containers-works-section">
+      <div class="work-container">
+        <img class="align-item" src="./image/snapshoot-portfolio-1.png">
+        <div class="work-info-container">
+          <h1 class="align-item">Tonic</h1>
+        </div>
+        <div class="work-description align-item">
+          <p class="company"> CANOPY </p>
+          <div class="separator"></div>
+          <p class="position"> Back End Dev </p>
+          <div class="separator"></div>
+          <p class="year"> 2015 </p>
+        </div>
+        <div class="project-description align-item">
+          <p> A daily selection of privately personalized reads; no accounts or sign-ups required. </p>
+        </div>
+        <div class="technologies align-item">
+          <ul class="technologie-label">
+            <li> html </li>
+            <li> css </li>
+            <li> javascript </li>
+          </ul>
+        </div>
+        <button class="see-project align-item"> See Project </button>
+      </div>
+      <div class="work-container">
+        <img class="align-item" src="./image/snapshoot-portfolio-2.png" alt="">
+        <div class="work-info-container">
+          <h1 class="align-item">Multi-Post Stories</h1>
+        </div>
+        <div class="work-description align-item">
+          <p class="company"> CANOPY </p>
+          <div class="separator"></div>
+          <p class="position"> Back End Dev </p>
+          <div class="separator"></div>
+          <p class="year"> 2015 </p>
+        </div>
+        <div class="project-description align-item">
+          <p>A daily selection of privately personalized reads; no accounts or sign-ups required.</p>
+        </div>
+        <div class="technologies align-item">
+          <ul class="technologie-label">
+            <li> html </li>
+            <li> css </li>
+            <li> javascript </li>
+          </ul>
+        </div>
+        <button class="see-project align-item">
+          See Project
+        </button>
+      </div>
+      <div class="work-container">
+        <img class="align-item" src="./image/snapshoot-portfolio-3.png" alt="Tonic">
+        <div class="work-info-container">
+          <h1 class="align-item">Tonic</h1>
+        </div>
+        <div class="work-description align-item">
+          <p class="company"> CANOPY </p>
+          <div class="separator"></div>
+          <p class="position"> Back End Dev </p>
+          <div class="separator"></div>
+          <p class="year"> 2015 </p>
+        </div>
+        <div class="project-description align-item">
+          <p> A daily selection of privately personalized reads; no accounts or sign-ups required. </p>
+        </div>
+        <div class="technologies align-item">
+          <ul class="technologie-label">
+            <li> html </li>
+            <li> css </li>
+            <li> javascript </li>
+          </ul>
+        </div>
+        <button class="see-project align-item"> See Project </button>
+      </div>
+      <div class="work-container">
+        <img class="align-item" src="./image/snapshoot-portfolio-4" alt="Multi-Post Stories">
+        <div class="work-info-container">
+          <h1 class="align-item">Multi-Post Stories</h1>
+        </div>
+        <div class="work-description align-item">
+          <p class="company"> CANOPY </p>
+          <div class="separator"></div>
+          <p class="position"> Back End Dev </p>
+          <div class="separator"></div>
+          <p class="year"> 2015 </p>
+        </div>
+        <div class="project-description align-item">
+          <p> A daily selection of privately personalized reads; no accounts or sign-ups required.</p>
+        </div>
+        <div class="technologies align-item">
+          <ul class="technologie-label">
+            <li> html </li>
+            <li>css</li>
+            <li>javascript</li>
+          </ul>
+        </div>
+        <button class="see-project align-item"> See Project </button>
+      </div>
+    </section>
+    <section id="about">
+      <div class="myself-containers">
+        <div id="about-description-container" class="headline align-item">
+          <section id="about-description">
+            <h1 id="about-title" class="section-title">About MySelf</h1>
+            <p class="headline-text"> Hello I'm a software developer! I can help you build a product , feature or website Look through some 
+              of my work and experience! 
+              If you like what you see and have a project you need coded, don't hestiate to contact me.
+            </p>
+          </section>
+		   <section>
+              <div class="lest-connect-text">
+                <p> LET'S CONNECT </p>
+              </div>
+              <ul class="link-media">
+                <li><a href="https://twitter.com/" target="_blank"><img src="./image/Vector-twitter.svg" alt="twitter icon"></a></li>
+                <li><a href="https://www.linkedin.com/in/jean-walner-alexis-b05539175/" target="_blank"><img src="./image/linkedin-icon.svg" alt="Linkedin icon"></a></li>
+                <li><a href="https://github.com/AlexisJW" target="_blank"><img src="./image/Vector-m.svg" alt="icon"></a></li>
+                <li><a href="https://github.com/AlexisJW" target="_blank"><img src="./image/Vector-github.svg" alt="Github icon"></a></li>
+                <li><a href="https://web.facebook.com/profile.php?id=100001094813889" target="_blank"><img src="./image/Vector.svg" alt="Fingers icon"></a></li>
+              </ul>
+			  <button class="see-project download-resume"> Get my Resume </button>
+          </section>
+          <section>
+            <div class="all-skills-container">
+              <ul>
+                <li class="global-skills-title">
+                  <p> Languages </p>
+                  <div class="down-arrow"></div>
+                </li>
+                <li>
+                  <ul class="global-skills-secondary">
+                    <li>
+                      <img src="./image/icon-javascript.png">
+                      <p> JavaScript </p>
+                    </li>
+                    <li>
+                      <img src="./image/html-icon.png">
+                      <p> HTML </p>
+                    </li>
+                    <li>
+                      <img src="./image/css-icon.png">
+                      <p> CSS </p>
+                    </li>
+                  </ul>
+                </li>
+                <li class="global-skills-title list-closed">
+                  <p> Frameworks </p>
+                  <div class="right-arrow"></div>
+                </li>
+                <li class="global-skills-title list-closed">
+                  <p> Skills </p>
+                  <div class="right-arrow"></div>
+                </li>
+              </ul>
+            </div>
+          </section>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
