Update Index.html File

--- a/index.html
+++ b/index.html
@@ -62,12 +62,10 @@
         <div class="project-description align-item">
           <p> A daily selection of privately personalized reads; no accounts or sign-ups required. </p>
         </div>
-        <div class="technologies align-item">
-          <ul class="technologie-label">
-            <li> html </li>
-            <li> css </li>
-            <li> javascript </li>
-          </ul>
+        <div class="technologie-label">
+          <div class="html"> html </div>
+          <div class="css"> css </div>
+          <div class="java"> javascript </div>
         </div>
         <button class="see-project align-item"> See Project </button>
       </div>
