Add Contact section to index.html file

--- a/index.html
+++ b/index.html
@@ -204,5 +204,16 @@
         </div>
       </div>
     </section>
+
+    <section class="contact">
+      <header>
+        <h2>Contact me</h2>
+        <p>If you have an application you are interested in developing, a feature that you need built or a project that needs coding. I’d love to help with it
+        </p>
+      </header>
+      <form action="#" method="post">
+        
+      </form>
+    </section>
   </body>
 </html>
