--- a/index.html
+++ b/index.html
@@ -212,7 +212,10 @@
         </p>
       </header>
       <form action="#" method="post">
-        
+        <input type="text" placeholder="Enter Full Name" id="user-name">
+        <input type="email" name="" placeholder="Enter e-mail" id="user-e-mail">
+        <textarea name="text-area" id="text-area" cols="30" rows="10"></textarea>
+        <button>Get in Touch</button>
       </form>
     </section>
   </body>
