--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="StyleSheet.css" />
 	<link href="https://fonts.googleapis.com/css?family=Poppins" rel="stylesheet" />
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title> Portfolio-Microverse </title>
   </head>
   <body>
@@ -13,9 +14,12 @@
       <div class="navbar-container">
         <a class="logo" href="#"> AlexisJW </a>
         <nav id="navbar">
-          <div class="About"></div>
-          <div class="My works"></div>
-          <div class="Contact"></div>
+          <a href="#portfolio"> Portfolio </a>
+          <a href="#about"> About </a>
+          <a href="contact"> Contact </a>
+		  <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+			<i class="fa fa-bars"></i>
+		  </a>
         </nav>
       </div>
 	  
@@ -23,8 +27,8 @@
       <div class="image-background">
          <section class="headline">
             <div>
-              <h1 class="text1"> I'm Alexis Glad to see you! </h1>
-              <p class="text2">
+              <h1 class="text-header"> I'm Alexis Glad to see you! </h1>
+              <p class="text-about">
                I'm a software developer! I can help you build a product , feature or
                website Look through some of my work and experience! If you like what
                you see and have a project you need coded, don't hestiate to contact me.
