Worked on the work section

--- a/index.html
+++ b/index.html
@@ -50,102 +50,122 @@
         </div>
 	  </div>
     </header>
+	<!--.work-container .work-description-align-item {
+	display: flex;
+	flex-direction: row;
+	align-items: center;
+	padding: 0px;
+	gap: 12px;
+	width: 297px;
+	height: 40px;
+	flex: none;
+	flex-grow: 0;
+  } -->
     <section class="containers-works-section">
       <div class="work-container">
         <img class="align-item" src="./image/snapshoot-portfolio-1.png">
-        <div class="work-info-container">
-          <h1 class="align-item">Tonic</h1>
-        </div>
-        <div class="work-description align-item">
-          <p class="company"> CANOPY </p>
-          <div class="separator"></div>
-          <p class="position"> Back End Dev </p>
-          <div class="separator"></div>
-          <p class="year"> 2015 </p>
-        </div>
-        <div class="project-description align-item">
-          <p> A daily selection of privately personalized reads; no accounts or sign-ups required. </p>
-        </div>
-        <div class="technologie-label">
-          <div class="html"> html </div>
-          <div class="css"> css </div>
-          <div class="java"> javascript </div>
-        </div>
-        <button class="see-project align-item"> See Project </button>
+		<div class="snapshot-details">
+			<div class="work-info-container">
+			  <h1 class="align-item">Tonic</h1>
+			</div>
+			<div class="work-description-align-item">
+			  <p class="company"> CANOPY </p>
+			  <div class="separator"></div>
+			  <p class="position"> Back End Dev </p>
+			  <div class="separator"></div>
+			  <p class="year"> 2015 </p>
+			</div>
+			<div class="project-description align-item">
+			  <p> A daily selection of privately personalized reads; no accounts or sign-ups required. </p>
+			</div>
+			<div class="technologie-label">
+			  <div class="html"> html </div>
+			  <div class="css"> css </div>
+			  <div class="java"> javascript </div>
+			</div>
+			<button class="see-project align-item"> See Project </button>
+		</div>
       </div>
       <div class="work-container">
         <img class="align-item" src="./image/snapshoot-portfolio-2.png" alt="">
-        <div class="work-info-container">
-          <h1 class="align-item">Multi-Post Stories</h1>
-        </div>
-        <div class="work-description align-item">
-          <p class="company"> CANOPY </p>
-          <div class="separator"></div>
-          <p class="position"> Back End Dev </p>
-          <div class="separator"></div>
-          <p class="year"> 2015 </p>
-        </div>
-        <div class="project-description align-item">
-          <p>A daily selection of privately personalized reads; no accounts or sign-ups required.</p>
-        </div>
-        <div class="technologies align-item">
-          <ul class="technologie-label">
-            <li> html </li>
-            <li> css </li>
-            <li> javascript </li>
-          </ul>
-        </div>
-        <button class="see-project align-item">
-          See Project
-        </button>
+        <div class="snapshot-details">
+			<div class="work-info-container">
+			  <h1 class="align-item">Multi-Post Stories</h1>
+			</div>
+			<div class="work-description-align-item">
+			  <p class="company"> CANOPY </p>
+			  <div class="separator"></div>
+			  <p class="position"> Back End Dev </p>
+			  <div class="separator"></div>
+			  <p class="year"> 2015 </p>
+			</div>
+			<div class="project-description align-item">
+			  <p>A daily selection of privately personalized reads; no accounts or sign-ups required.</p>
+			</div>
+			<div class="technologies align-item">
+			  <ul class="technologie-label">
+				<li> html </li>
+				<li> css </li>
+				<li> javascript </li>
+			  </ul>
+			</div>
+			<button class="see-project align-item">
+			  See Project
+			</button>
+		<div class="snapshot-details">
       </div>
       <div class="work-container">
         <img class="align-item" src="./image/snapshoot-portfolio-3.png" alt="Tonic">
-        <div class="work-info-container">
-          <h1 class="align-item">Tonic</h1>
-        </div>
-        <div class="work-description align-item">
-          <p class="company"> CANOPY </p>
-          <div class="separator"></div>
-          <p class="position"> Back End Dev </p>
-          <div class="separator"></div>
-          <p class="year"> 2015 </p>
-        </div>
-        <div class="project-description align-item">
-          <p> A daily selection of privately personalized reads; no accounts or sign-ups required. </p>
-        </div>
-        <div class="technologies align-item">
-          <ul class="technologie-label">
-            <li> html </li>
-            <li> css </li>
-            <li> javascript </li>
-          </ul>
-        </div>
-        <button class="see-project align-item"> See Project </button>
+		<div class="snapshot-details">
+			<div class="work-info-container">
+			  <h1 class="align-item">Tonic</h1>
+			</div>
+			<div class="work-description-align-item">
+			  <p class="company"> CANOPY </p>
+			  <div class="separator"></div>
+			  <p class="position"> Back End Dev </p>
+			  <div class="separator"></div>
+			  <p class="year"> 2015 </p>
+			</div>
+			<div class="project-description align-item">
+			  <p> A daily selection of privately personalized reads; no accounts or sign-ups required. </p>
+			</div>
+			<div class="technologies align-item">
+			  <ul class="technologie-label">
+				<li> html </li>
+				<li> css </li>
+				<li> javascript </li>
+			  </ul>
+			</div>
+			<button class="see-project align-item"> See Project </button>
+		<div class="snapshot-details">
       </div>
       <div class="work-container">
         <img class="align-item" src="./image/snapshoot-portfolio-4" alt="Multi-Post Stories">
-        <div class="work-info-container">
-          <h1 class="align-item">Multi-Post Stories</h1>
-        </div>
-        <div class="work-description align-item">
-          <p class="company"> CANOPY </p>
-          <div class="separator"></div>
-          <p class="position"> Back End Dev </p>
-          <div class="separator"></div>
-          <p class="year"> 2015 </p>
-        </div>
-        <div class="project-description align-item">
-          <p> A daily selection of privately personalized reads; no accounts or sign-ups required.</p>
-        </div>
-        <div class="technologies align-item">
-          <ul class="technologie-label">
-            <li> html </li>
-            <li>css</li>
-            <li>javascript</li>
-          </ul>
-        </div>
-        <button class="see-project align-item"> See Project </button>
+		<div class="snapshot-details">
+			<div class="work-info-container">
+			  <h1 class="align-item">Multi-Post Stories</h1>
+			</div>
+			<div class="work-description-align-item">
+			  <p class="company"> CANOPY </p>
+			  <div class="separator"></div>
+			  <p class="position"> Back End Dev </p>
+			  <div class="separator"></div>
+			  <p class="year"> 2015 </p>
+			</div>
+			<div class="project-description align-item">
+			  <p> A daily selection of privately personalized reads; no accounts or sign-ups required.</p>
+			</div>
+			<div class="technologies align-item">
+			  <ul class="technologie-label">
+				<li> html </li>
+				<li>css</li>
+				<li>javascript</li>
+				
+			  </ul>
+			</div>
+			<button class="see-project align-item"> See Project </button>
+		</div>
       </div>
     </section>
     <section id="about">
