Update the works container section

--- a/index.html
+++ b/index.html
@@ -22,152 +22,118 @@
 		  </a>
         </nav>
       </div>
-	  
-     <div class="section-1">  
-      <div class="image-background">
-         <section class="headline">
-            <div>
-              <h1 class="text-header"> I'm Alexis Glad to see you! </h1>
-              <p class="text-about">
-               I'm a software developer! I can help you build a product , feature or
-               website Look through some of my work and experience! If you like what
-               you see and have a project you need coded, don't hestiate to contact me.
-              </p>
-            </div>
-            <section>
-              <div class="lest-connect-text">
-                <a href="#" target="_blank" id="button-connect"> LET'S CONNECT </a>
-              </div>
-              <ul class="link-media">
-                <li><a href="https://twitter.com/" target="_blank"><img src="./image/Vector-twitter.svg" alt="twitter icon"></a></li>
-                <li><a href="https://www.linkedin.com/in/jean-walner-alexis-b05539175/" target="_blank"><img src="./image/linkedin-icon.svg" alt="Linkedin icon"></a></li>
-                <li><a href="https://github.com/AlexisJW" target="_blank"><img src="./image/Vector-m.svg" alt="icon"></a></li>
-                <li><a href="https://github.com/AlexisJW" target="_blank"><img src="./image/Vector-github.svg" alt="Github icon"></a></li>
-                <li><a href="https://web.facebook.com/profile.php?id=100001094813889" target="_blank"><img src="./image/Vector.svg" alt="Fingers icon"></a></li>
-              </ul>
-            </section>
-          </section>
-        </div>
-	  </div>
-    </header>
-	<!--.work-container .work-description-align-item {
-	display: flex;
-	flex-direction: row;
-	align-items: center;
-	padding: 0px;
-	gap: 12px;
-	width: 297px;
-	height: 40px;
-	flex: none;
-	flex-grow: 0;
-  } -->
-    <section class="containers-works-section">
-      <div class="work-container">
-        <img class="align-item" src="./image/snapshoot-portfolio-1.png">
-		<div class="snapshot-details">
-			<div class="work-info-container">
-			  <h1 class="align-item">Tonic</h1>
-			</div>
-			<div class="work-description-align-item">
-			  <p class="company"> CANOPY </p>
-			  <div class="separator"></div>
-			  <p class="position"> Back End Dev </p>
-			  <div class="separator"></div>
-			  <p class="year"> 2015 </p>
-			</div>
-			<div class="project-description align-item">
-			  <p> A daily selection of privately personalized reads; no accounts or sign-ups required. </p>
-			</div>
-			<div class="technologie-label">
-			  <div class="html"> html </div>
-			  <div class="css"> css </div>
-			  <div class="java"> javascript </div>
-			</div>
-			<button class="see-project align-item"> See Project </button>
-		</div>
-      </div>
-      <div class="work-container">
-        <img class="align-item" src="./image/snapshoot-portfolio-2.png" alt="">
-        <div class="snapshot-details">
-			<div class="work-info-container">
-			  <h1 class="align-item">Multi-Post Stories</h1>
-			</div>
-			<div class="work-description-align-item">
-			  <p class="company"> CANOPY </p>
-			  <div class="separator"></div>
-			  <p class="position"> Back End Dev </p>
-			  <div class="separator"></div>
-			  <p class="year"> 2015 </p>
-			</div>
-			<div class="project-description align-item">
-			  <p>A daily selection of privately personalized reads; no accounts or sign-ups required.</p>
-			</div>
-			<div class="technologies align-item">
-			  <ul class="technologie-label">
-				<li> html </li>
-				<li> css </li>
-				<li> javascript </li>
-			  </ul>
-			</div>
-			<button class="see-project align-item">
-			  See Project
-			</button>
-		<div class="snapshot-details">
-      </div>
-      <div class="work-container">
-        <img class="align-item" src="./image/snapshoot-portfolio-3.png" alt="Tonic">
-		<div class="snapshot-details">
-			<div class="work-info-container">
-			  <h1 class="align-item">Tonic</h1>
-			</div>
-			<div class="work-description-align-item">
-			  <p class="company"> CANOPY </p>
-			  <div class="separator"></div>
-			  <p class="position"> Back End Dev </p>
-			  <div class="separator"></div>
-			  <p class="year"> 2015 </p>
-			</div>
-			<div class="project-description align-item">
-			  <p> A daily selection of privately personalized reads; no accounts or sign-ups required. </p>
-			</div>
-			<div class="technologies align-item">
-			  <ul class="technologie-label">
-				<li> html </li>
-				<li> css </li>
-				<li> javascript </li>
-			  </ul>
-			</div>
-			<button class="see-project align-item"> See Project </button>
-		<div class="snapshot-details">
-      </div>
-      <div class="work-container">
-        <img class="align-item" src="./image/snapshoot-portfolio-4" alt="Multi-Post Stories">
-		<div class="snapshot-details">
-			<div class="work-info-container">
-			  <h1 class="align-item">Multi-Post Stories</h1>
-			</div>
-			<div class="work-description-align-item">
-			  <p class="company"> CANOPY </p>
-			  <div class="separator"></div>
-			  <p class="position"> Back End Dev </p>
-			  <div class="separator"></div>
-			  <p class="year"> 2015 </p>
-			</div>
-			<div class="project-description align-item">
-			  <p> A daily selection of privately personalized reads; no accounts or sign-ups required.</p>
-			</div>
-			<div class="technologies align-item">
-			  <ul class="technologie-label">
-				<li> html </li>
-				<li>css</li>
-				<li>javascript</li>
-				
-			  </ul>
-			</div>
-			<button class="see-project align-item"> See Project </button>
-		</div>
-      </div>
-    </section>
+     <section class="containers-works-section">
+     <div class="work-container">
+	 <div class="box">
+		 <img src="./img/Snapshoot Portfolio.png" alt="snapshot poortfolio" class="snapshot">
+		 <div class="details">
+		   <div class="work-description-align-item">
+			   <div class="works-elements">
+				   <h2 class="project-title">Tonic</h2>
+				   <div class="frame-client">
+					   <span class="client">
+						   CANOPY</span>
+					   <img src="./img/Counter.png" alt="" class="counter">
+					   <span class="role">Back End Dev</span>
+					   <img src="./img/Counter.png" alt="" class="counter">
+					   <span class="year">2015</span>
+				   </div>
+			   </div>
+		   </div>
+		   <p class="details">
+				   A daily selection of privately personalized reads; no accounts or sign-ups required.
+		   </p>
+		   <ul class="technologie-label">
+			   <li>html</li>
+			   <li>css</li>
+			   <li>javaScript</li>
+		   </ul>
+		   <button class="see-project">See Project</button>
+		 </div>
+	   </div>
+	   <div class="box">
+		 <img src="./img/Snapshoot Portfolio (1).png" alt="snapshot poortfolio" class="snapshot">
+		  <div class="details">
+			 <div class="work-description-align-item">
+			   <div class="works-elements">
+				 <h2 class="project-title"> Multi-Post Stories </h2>
+				 <div class="frame-client">
+					<span class="client"> CANOPY </span>
+					<img src="./img/Counter.png" alt="" class="counter">
+					<span class="role"> Back End Dev </span>
+					<img src="./img/Counter.png" alt="" class="counter">
+					<span class="year"> 2015 </span>
+				 </div>
+			   </div>
+			 </div>
+			<span class="details"> A daily selection of privately personalized reads; no accounts or sign-ups required. </span>
+			 <ul class="technologie-label">
+			   <li> html </li>
+			   <li> css </li>
+			   <li> javaScript </li>
+			 </ul>
+			 <button class="see-project"> See Project </button>
+	      </div>
+	   </div>
+
+	 <div class="box">
+		 <img src="./img/Snapshoot Portfolio (2).png" alt="" class="snapshot">
+		 <div class="details">
+		   <div class="work-description-align-item">
+				 <div class="works-elements">
+					 <h2 class="project-title">Tonic</h2>
+					 <div class="frame-client">
+						 <span class="client">
+							 CANOPY</span>
+						 <img src="./img/Counter.png" alt="" class="counter">
+						 <span class="role">Back End Dev</span>
+						 <img src="./img/Counter.png" alt="" class="counter">
+						 <span class="year">2015</span>
+					 </div>
+				 </div>
+			 </div>
+			 <span class="details">
+					 A daily selection of privately personalized reads; no accounts or sign-ups required.
+			 </span>
+			 <ul class="technologie-label">
+				 <li>html</li>
+				 <li>css</li>
+				 <li>javaScript</li>
+			 </ul>
+			 <button class="see-project">See Project</button>
+		 </div>
+	 </div>
+
+	 <div class="box">
+		 <img src="./img/Snapshoot Portfolio (3).png" alt="" class="snapshot">
+		 <div class="details">
+		   <div class="work-description-align-item">
+			   <div class="works-elements">
+				   <h2 class="project-title">Multi-Post
+					   Stories</h2>
+				   <div class="frame-client">
+					   <span class="client">
+						   CANOPY</span>
+					   <img src="./img/Counter.png" alt="" class="counter">
+					   <span class="role">Back End Dev</span>
+					   <img src="./img/Counter.png" alt="" class="counter">
+					   <span class="year">2015</span>
+				   </div>
+			   </div>
+		   </div>
+		   <span class="details">
+				   A daily selection of privately personalized reads; no accounts or sign-ups required.
+		   </span>
+		   <ul class="technologie-label">
+			   <li> html </li>
+			   <li> css </li>
+			   <li> javaScrip t</li>
+		   </ul>
+		   <button class="see-project"> See Project </button>
+	   </div>
+	 </div>
+    </div>
+   </section>
     <section id="about">
       <div class="myself-containers">
         <div id="about-description-container" class="headline align-item">
